Fix z-index of title display
This was causing it to display on top of the header if the user scrolled up, causing it to look weird

--- a/Wuikinuxv Learning App/src/assets/Components/Word.css
+++ b/Wuikinuxv Learning App/src/assets/Components/Word.css
@@ -18,7 +18,6 @@
     font-size: 0.8em;
     color: #333;
     width: 300px;
-    z-index: 2;
 }
 .word-part-active:not([title='']):before{
     display: block;
